Добавляет бекграунд героя, иконки тел. и эьейл, иконки в преимущества

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         </ul>
 
         <ul class="nav-contakt">
-          <li class="nav-items">
+          <li class="nav-items mail">
             <a href="mailto:info@devstudio.com" class="link-mail"
               >info@devstudio.com</a
             >
           </li>
-          <li class="nav-items">
+          <li class="nav-items tell">
             <a href="tel:+380961111111" class="link-tel">+380961111111</a>
           </li>
         </ul>
@@ -60,12 +60,12 @@
           <h2 class="section-title invisible">Наши преимущества</h2>
 
           <ul class="advantages">
-            <li class="section-items">
-              <img
+            <li class="section-items antenna">
+              <!--<img
                 class="section-img"
                 src="./image/antenna.svg"
                 alt="Спутниковая тарелка"
-              />
+              />-->
 
               <h3 class="section-subtitle">Внимание к деталям</h3>
               <p class="section-text">
@@ -73,28 +73,30 @@
                 формированию позиции.
               </p>
             </li>
-            <li class="section-items">
-              <img class="section-img" src="./image/clock.svg" alt="Часы" />
+            <li class="section-items clock">
+              <!--- <img class="section-img" 
+                src="./image/clock.svg" alt="Часы" />-->
               <h3 class="section-subtitle">Пунктуальность</h3>
               <p class="section-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="section-items">
-              <img class="section-img" src="./image/Vector.svg" alt="Вектор" />
+            <li class="section-items vector">
+              <!-- <img class="section-img" 
+              src="./image/Vector.svg" alt="Вектор" />-->
               <h3 class="section-subtitle">Планирование</h3>
               <p class="section-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="section-items">
-              <img
+            <li class="section-items astronaut">
+              <!-- <img
                 class="section-img"
                 src="./image/astronaut.svg"
                 alt="Астронавт"
-              />
+              />-->
               <h3 class="section-subtitle">Современные технологии</h3>
               <p class="section-text">
                 Значимость этих проблем настолько очевидна, что реализация
