--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,12 @@
         </ul>
 
         <ul class="nav-contakt">
-          <li class="nav-items">
+          <li class="nav-items mail">
             <a href="mailto:info@devstudio.com" class="link-mail"
               >info@devstudio.com</a
             >
           </li>
-          <li class="nav-items">
+          <li class="nav-items tell">
             <a href="tel:+380961111111" class="link-tel">+380961111111</a>
           </li>
         </ul>
