Добавляет иконки соц. сетей в футере, эфект тени в команде и в картах портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -285,34 +285,36 @@
           <p class="social-text">Присоединяйтесь</p>
 
           <ul class="social-list">
-            <li>
+            <li class="socials insta">
               <a
                 href="https://www.instagram.com/"
                 class="social-link"
                 target="blank"
-                >instagram</a
-              >
+                ><img src="./image/instagram.svg" alt="insta"
+              /></a>
             </li>
-            <li>
+            <li class="socials twit">
               <a href="https://twitter.com/" class="social-link" target="blank"
-                >twitter</a
-              >
+                ><img src="./image/twitter.svg" alt="twit" />
+              </a>
             </li>
-            <li>
+            <li class="socials face">
               <a
                 href="https://www.facebook.com/"
                 class="social-link"
                 target="blank"
-                >facebook</a
               >
+                <img src="./image/facebook.svg" alt="fk" />
+              </a>
             </li>
-            <li>
+            <li class="socials linked">
               <a
                 href="https://www.linkedin.com/"
                 class="social-link"
                 target="blank"
-                >linkedin</a
               >
+                <img src="./image/linkedin.svg" alt="in" />
+              </a>
             </li>
           </ul>
         </div>
