оптимизирует свж, добавлдяет свж спрайт

--- a/index.html
+++ b/index.html
@@ -33,12 +33,20 @@
 
         <ul class="nav-contakt">
           <li class="nav-items mail">
-            <a href="mailto:info@devstudio.com" class="link-mail"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="link-mail">
+              <svg class="icon">
+                <use href="./image/sprite.svg#list"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="nav-items tell">
-            <a href="tel:+380961111111" class="link-tel">+380961111111</a>
+            <a href="tel:+380961111111" class="link-tel">
+              <svg class="icon">
+                <use href="./image/sprite.svg#phone"></use>
+              </svg>
+              +380961111111</a
+            >
           </li>
         </ul>
       </nav>
