добавляет "наши преимущества"

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 
           <ul class="advantages">
             <li class="section-items antenna">
+              <div class="container-advantages">
+                <svg class="icon-advantages">
+                  <use href="./image/sprite.svg#antenna"></use>
+                </svg>
+              </div>
               <!--<img
                 class="section-img"
                 src="./image/antenna.svg"
@@ -82,6 +87,11 @@
               </p>
             </li>
             <li class="section-items clock">
+              <div class="container-advantages">
+                <svg class="icon-advantages">
+                  <use href="./image/sprite.svg#clock"></use>
+                </svg>
+              </div>
               <!--- <img class="section-img" 
                 src="./image/clock.svg" alt="Часы" />-->
               <h3 class="section-subtitle">Пунктуальность</h3>
@@ -91,6 +101,11 @@
               </p>
             </li>
             <li class="section-items vector">
+              <div class="container-advantages">
+                <svg class="icon-advantages">
+                  <use href="./image/sprite.svg#Vector"></use>
+                </svg>
+              </div>
               <!-- <img class="section-img" 
               src="./image/Vector.svg" alt="Вектор" />-->
               <h3 class="section-subtitle">Планирование</h3>
@@ -100,6 +115,11 @@
               </p>
             </li>
             <li class="section-items astronaut">
+              <div class="container-advantages">
+                <svg class="icon-advantages">
+                  <use href="./image/sprite.svg#astronaut"></use>
+                </svg>
+              </div>
               <!-- <img
                 class="section-img"
                 src="./image/astronaut.svg"
