Добавляет свж клиентов, соц.сетей в команде, футере и портфолио

--- a/index.html
+++ b/index.html
@@ -180,32 +180,52 @@
                     href="https://www.instagram.com/"
                     class="social-link"
                     target="blank"
-                    >instagram</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#instagram"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://twitter.com/"
                     target="blank"
                     class="social-link"
-                    >twitter</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#twitter"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://www.facebook.com/"
                     target="blank"
                     class="social-link"
-                    >facebook</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#facebook"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://www.linkedin.com/"
                     target="blank"
                     class="social-link"
-                    >linkedin</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#linkedin"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -218,34 +238,54 @@
                 <li>
                   <a
                     href="https://www.instagram.com/"
-                    target="blank"
                     class="social-link"
-                    >instagram</a
+                    target="blank"
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#instagram"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://twitter.com/"
                     target="blank"
                     class="social-link"
-                    >twitter</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#twitter"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://www.facebook.com/"
                     target="blank"
                     class="social-link"
-                    >facebook</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#facebook"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://www.linkedin.com/"
                     target="blank"
                     class="social-link"
-                    >linkedin</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#linkedin"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -258,34 +298,54 @@
                 <li>
                   <a
                     href="https://www.instagram.com/"
-                    target="blank"
                     class="social-link"
-                    >instagram</a
+                    target="blank"
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#instagram"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://twitter.com/"
                     target="blank"
                     class="social-link"
-                    >twitter</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#twitter"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://www.facebook.com/"
                     target="blank"
                     class="social-link"
-                    >facebook</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#facebook"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://www.linkedin.com/"
                     target="blank"
                     class="social-link"
-                    >linkedin</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#linkedin"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -298,34 +358,54 @@
                 <li>
                   <a
                     href="https://www.instagram.com/"
-                    target="blank"
                     class="social-link"
-                    >instagram</a
+                    target="blank"
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#instagram"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://twitter.com/"
                     target="blank"
                     class="social-link"
-                    >twitter</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#twitter"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://www.facebook.com/"
                     target="blank"
                     class="social-link"
-                    >facebook</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#facebook"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
                 <li>
                   <a
                     href="https://www.linkedin.com/"
                     target="blank"
                     class="social-link"
-                    >linkedin</a
                   >
+                    <div class="socials-item">
+                      <svg width="20" height="20" class="logo-social">
+                        <use href="./image/sprite.svg#linkedin"></use>
+                      </svg>
+                    </div>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -335,44 +415,80 @@
 
       <!--Постоянные клиенты-->
 
-      <section class="section">
+      <section class="section client">
         <div class="container">
           <h2 class="section-title title-customers">Постоянные клиенты</h2>
           <ul class="client-list">
             <li class="client-items">
-              <a href=""
-                ><img src="./image/Client1.svg" alt="компания" width="170"
-              /></a>
+              <a href="" class="client-link">
+                <!--<img src="./image/Client1.svg" alt="компания" width="170"
+              />-->
+                <div class="client-bgt">
+                  <svg width="44" height="50" class="logo-client">
+                    <use href="./image/sprite.svg#Client1"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+
+            <li class="client-items">
+              <a href="">
+                <!--<img src="./image/Client2.svg" alt="компания" width="170"
+              />-->
+                <div class="client-bgt">
+                  <svg width="40" height="52" class="logo-client">
+                    <use href="./image/sprite.svg#Client2"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+
+            <li class="client-items">
+              <a href="">
+                <!-- <img src="./image/Client3.svg" alt="компания" width="170"
+              /> -->
+                <div class="client-bgt">
+                  <svg width="41" height="43" class="logo-client">
+                    <use href="./image/sprite.svg#Client3"></use>
+                  </svg>
+                </div>
+              </a>
             </li>
 
             <li class="client-items">
               <a href=""
-                ><img src="./image/Client2.svg" alt="компания" width="170"
-              /></a>
+                ><!--<img src="./image/Client4.svg" alt="компания" width="170"
+              />-->
+                <div class="client-bgt">
+                  <svg width="80" height="42" class="logo-client">
+                    <use href="./image/sprite.svg#Client4"></use>
+                  </svg>
+                </div>
+              </a>
             </li>
 
             <li class="client-items">
               <a href=""
-                ><img src="./image/Client3.svg" alt="компания" width="170"
-              /></a>
+                ><!--<img src="./image/Client5.svg" alt="компания" width="170"
+              />-->
+                <div class="client-bgt">
+                  <svg width="59" height="47" class="logo-client">
+                    <use href="./image/sprite.svg#Client5"></use>
+                  </svg>
+                </div>
+              </a>
             </li>
 
             <li class="client-items">
-              <a href=""
-                ><img src="./image/Client4.svg" alt="компания" width="170"
-              /></a>
-            </li>
-
-            <li class="client-items">
-              <a href=""
-                ><img src="./image/Client5.svg" alt="компания" width="170"
-              /></a>
-            </li>
-
-            <li class="client-items">
-              <a href=""
-                ><img src="./image/Client6.svg" alt="компания" width="170"
-              /></a>
+              <a href="">
+                <!--<img src="./image/Client6.svg" alt="компания" width="170"
+              />-->
+                <div class="client-bgt">
+                  <svg width="89" height="45" class="logo-client">
+                    <use href="./image/sprite.svg#Client6"></use>
+                  </svg>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -410,35 +526,56 @@
           <p class="social-text">Присоединяйтесь</p>
 
           <ul class="social-list">
-            <li class="socials insta">
+            <li class="insta">
               <a
                 href="https://www.instagram.com/"
                 class="social-link"
                 target="blank"
-                ><img src="./image/instagram.svg" alt="insta"
-              /></a>
-            </li>
-            <li class="socials twit">
-              <a href="https://twitter.com/" class="social-link" target="blank"
-                ><img src="./image/twitter.svg" alt="twit" />
+              >
+                <!--<img src="./image/instagram.svg" alt="insta" />-->
+                <div class="socials-footer">
+                  <svg width="20" height="20" class="logo-social-footer">
+                    <use href="./image/sprite.svg#instagram"></use>
+                  </svg>
+                </div>
               </a>
             </li>
-            <li class="socials face">
+            <li class="twit">
+              <a href="https://twitter.com/" class="social-link" target="blank">
+                <!--<img src="./image/twitter.svg" alt="twit" />-->
+                <div class="socials-footer">
+                  <svg width="20" height="20" class="logo-social-footer">
+                    <use href="./image/sprite.svg#twitter"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+            <li class="face">
               <a
                 href="https://www.facebook.com/"
                 class="social-link"
                 target="blank"
               >
-                <img src="./image/facebook.svg" alt="fk" />
+                <!-- <img src="./image/facebook.svg" alt="fk" />-->
+                <div class="socials-footer">
+                  <svg width="20" height="20" class="logo-social-footer">
+                    <use href="./image/sprite.svg#facebook"></use>
+                  </svg>
+                </div>
               </a>
             </li>
-            <li class="socials linked">
+            <li class="linked">
               <a
                 href="https://www.linkedin.com/"
                 class="social-link"
                 target="blank"
               >
-                <img src="./image/linkedin.svg" alt="in" />
+                <!--<img src="./image/linkedin.svg" alt="in" />-->
+                <div class="socials-footer">
+                  <svg width="20" height="20" class="logo-social-footer">
+                    <use href="./image/sprite.svg#linkedin"></use>
+                  </svg>
+                </div>
               </a>
             </li>
           </ul>
