Добавляет переход на страницу студии с портфолио

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         </a>
 
         <ul class="nav-list">
-          <li class="nav-items"><a href="" class="link current">Студия</a></li>
+          <li class="nav-items">
+            <a href="./index.html" class="link current">Студия</a>
+          </li>
           <li class="nav-items">
             <a href="./portfolio.html" class="link">Портфолио</a>
           </li>
