--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,9 @@
         </a>
 
         <ul class="nav-list">
-          <li class="nav-items"><a href="" class="link">Студия</a></li>
+          <li class="nav-items">
+            <a href="./index.html" class="link">Студия</a>
+          </li>
           <li class="nav-items">
             <a href="./portfolio.html" class="link current">Портфолио</a>
           </li>
