Исправляет ошибки дом. работы

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section class="section-heroy">
         <div class="container">
           <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
-          <a href="" class="button">Заказать услугу</a>
+          <button class="button">Заказать услугу</button>
         </div>
       </section>
       <!--Наши преимущества-->
@@ -422,74 +422,68 @@
           <h2 class="section-title title-customers">Постоянные клиенты</h2>
           <ul class="client-list">
             <li class="client-items">
-              <a href="" class="client-link">
+              <a href="" class="client-link client-bgt">
                 <!--<img src="./image/Client1.svg" alt="компания" width="170"
               />-->
-                <div class="client-bgt">
-                  <svg width="44" height="50" class="logo-client">
-                    <use href="./image/sprite.svg#Client1"></use>
-                  </svg>
-                </div>
+
+                <svg width="44" height="50" class="logo-client">
+                  <use href="./image/sprite.svg#Client1"></use>
+                </svg>
               </a>
             </li>
 
-            <li class="client-items">
+            <li class="client-items client-bgt">
               <a href="">
                 <!--<img src="./image/Client2.svg" alt="компания" width="170"
               />-->
-                <div class="client-bgt">
-                  <svg width="40" height="52" class="logo-client">
-                    <use href="./image/sprite.svg#Client2"></use>
-                  </svg>
-                </div>
+
+                <svg width="40" height="52" class="logo-client">
+                  <use href="./image/sprite.svg#Client2"></use>
+                </svg>
               </a>
             </li>
 
-            <li class="client-items">
+            <li class="client-items client-bgt">
               <a href="">
                 <!-- <img src="./image/Client3.svg" alt="компания" width="170"
               /> -->
-                <div class="client-bgt">
-                  <svg width="41" height="43" class="logo-client">
-                    <use href="./image/sprite.svg#Client3"></use>
-                  </svg>
-                </div>
+
+                <svg width="41" height="43" class="logo-client">
+                  <use href="./image/sprite.svg#Client3"></use>
+                </svg>
               </a>
             </li>
 
-            <li class="client-items">
+            <li class="client-items client-bgt">
               <a href=""
                 ><!--<img src="./image/Client4.svg" alt="компания" width="170"
               />-->
-                <div class="client-bgt">
-                  <svg width="80" height="42" class="logo-client">
-                    <use href="./image/sprite.svg#Client4"></use>
-                  </svg>
-                </div>
+
+                <svg width="80" height="42" class="logo-client">
+                  <use href="./image/sprite.svg#Client4"></use>
+                </svg>
               </a>
             </li>
 
-            <li class="client-items">
+            <li class="client-items client-bgt">
               <a href=""
                 ><!--<img src="./image/Client5.svg" alt="компания" width="170"
               />-->
-                <div class="client-bgt">
-                  <svg width="59" height="47" class="logo-client">
-                    <use href="./image/sprite.svg#Client5"></use>
-                  </svg>
-                </div>
+
+                <svg width="59" height="47" class="logo-client">
+                  <use href="./image/sprite.svg#Client5"></use>
+                </svg>
               </a>
             </li>
 
-            <li class="client-items">
+            <li class="client-items client-bgt">
               <a href="">
                 <!--<img src="./image/Client6.svg" alt="компания" width="170"
               />-->
-                <div class="client-bgt">
-                  <svg width="89" height="45" class="logo-client">
-                    <use href="./image/sprite.svg#Client6"></use>
-                  </svg>
-                </div>
+
+                <svg width="89" height="45" class="logo-client">
+                  <use href="./image/sprite.svg#Client6"></use>
+                </svg>
               </a>
             </li>
           </ul>
