--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!--Наши преимущества-->
       <section class="section">
         <div class="container">
-          <h2 class="section-title invisible">Наши преимущества</h2>
+          <h2 class="section-title visually-hidden">Наши преимущества</h2>
 
           <ul class="advantages">
             <li class="section-items antenna">
@@ -143,22 +143,37 @@
           <h2 class="section-title title-work">Чем мы занимаемся</h2>
           <ul class="work-list">
             <li class="work-items">
-              <a href=""
-                ><img src="./image/notebook.jpg" width="370" alt="ноутбук" />
+              <a href="" class="work-link">
+                <img
+                  src="./image/notebook.jpg"
+                  width="100%"
+                  height="100%"
+                  alt="ноутбук"
+                />
                 <p class="work">Десктопные приложения</p>
               </a>
             </li>
 
             <li class="work-items">
-              <a href=""
-                ><img src="./image/phone.jpg" width="370" alt="Телефон" />
+              <a href="" class="work-link"
+                ><img
+                  src="./image/phone.jpg"
+                  width="100%"
+                  height="100%"
+                  alt="Телефон"
+                />
                 <p class="work">Мобильные приложения</p>
               </a>
             </li>
 
             <li class="work-items">
-              <a href=""
-                ><img src="./image/desktop.jpg" width="370" alt="Монитор" />
+              <a href="" class="work-link"
+                ><img
+                  src="./image/desktop.jpg"
+                  width="100%"
+                  height="100%"
+                  alt="Монитор"
+                />
                 <p class="work">Дизайнерские решения</p>
               </a>
             </li>
