--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
 
         <ul class="port-list">
           <li class="port-items">
-            <div>
+            <div class="port-description">
               <img
                 class="port-img"
                 src="./image/portfolio1.jpg "
@@ -100,7 +100,7 @@
           </li>
 
           <li class="port-items">
-            <div>
+            <div class="port-description">
               <img
                 class="port-img"
                 src="./image/portfolio2.jpg"
@@ -120,7 +120,7 @@
           </li>
 
           <li class="port-items">
-            <div>
+            <div class="port-description">
               <img
                 class="port-img"
                 src="./image/portfolio3.jpg"
@@ -140,7 +140,7 @@
           </li>
 
           <li class="port-items">
-            <div>
+            <div class="port-description">
               <img
                 class="port-img"
                 src="./image/portfolio4.jpg"
@@ -160,7 +160,7 @@
           </li>
 
           <li class="port-items">
-            <div>
+            <div class="port-description">
               <img
                 class="port-img"
                 src="./image/portfolio5.jpg"
@@ -180,7 +180,7 @@
           </li>
 
           <li class="port-items">
-            <div>
+            <div class="port-description">
               <img
                 class="port-img"
                 src="./image/portfolio6.jpg"
@@ -200,7 +200,7 @@
           </li>
 
           <li class="port-items">
-            <div>
+            <div class="port-description">
               <img
                 class="port-img"
                 src="./image/portfolio7.jpg"
@@ -220,7 +220,7 @@
           </li>
 
           <li class="port-items">
-            <div>
+            <div class="port-description">
               <img
                 class="port-img"
                 src="./image/portfolio8.jpg"
@@ -240,7 +240,7 @@
           </li>
 
           <li class="port-items">
-            <div>
+            <div class="port-description">
               <img
                 class="port-img"
                 src="./image/portfolio9.jpg"
